#                                               -*- Automake -*-
# -----------------------------------------------------------------------------
#
# K. Rabbertz, 12.03.2017
#
# fastNLO_toolkit
#
# -----------------------------------------------------------------------------
# Use GNU standards
AUTOMAKE_OPTIONS = gnu

# Add logo to distribution for doxygen pages
EXTRA_DIST = fastNLO_logo_200x50.png

# Files that are required to build the project but that can be
# recreated IF the necessary autotools etc. are available by:
# "autoreconf -i; ./configure"
# Use "make maintainer-clean" (on a build machine) before svn commits,
# but not for distribution
MAINTAINERCLEANFILES = Makefile.in
